TestSuite/errors/err0422.pas
function f(i: integer): string;
begin
  
end;

begin
  writeln(f.GetType);
end.